--- a/Logos_Front/src/main/webapp/css/style.css
+++ b/Logos_Front/src/main/webapp/css/style.css
@@ -76,3 +76,18 @@
 	padding: 5px;
 	display: inline;
 }
+
+#login_header {
+	border: 5px solid red;
+	display: table;
+	height:100vh;
+	width: 100%;
+}
+
+form {
+	border: 5px solid blue;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+
