début évaluation_front

--- a/Logos_Front/src/main/webapp/css/style.css
+++ b/Logos_Front/src/main/webapp/css/style.css
@@ -195,3 +195,9 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 	text-decoration: underline;
 	color: #17827d;
 }
+
+#evaluation {
+	margin-top:10px;
+	font-size: medium;
+	font-weight: bold;
+}
