--- a/Logos_Front/src/main/webapp/css/style.css
+++ b/Logos_Front/src/main/webapp/css/style.css
@@ -204,7 +204,7 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 }
 
 .messages-affiche{
-	height: 600px;
+/* 	height: 600px; */
 	margin-top: 50px;
 	position: relative;
 }
@@ -233,21 +233,25 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 	max-width: 70%;
 }
 
-.messages{
-	overflow: scroll;
-	height:85%;
-}
+/* .messages{ */
+/* 	overflow: scroll; */
+/* 	height:85%; */
+/* } */
 
 .myself{
 	background-color: lightgreen;
-	
+	text-align: right;
+	position: relative;
+	right: -20%;
+}
+
+.myself, .date-lecture{
+	display: none;
 }
 
 .other{
 	background-color: lightblue;
-	text-align: right;
-	position: relative;
-	right: -20%;
+	
 	
 }
 
@@ -255,7 +259,7 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 	text-align: center;
 }
 
-.nomAuteur{
+.nomAuteur, .date-lecture{
 	display: block;
 	font-style: italic;
 	color: grey;
