--- a/Logos_Front/src/main/webapp/css/style.css
+++ b/Logos_Front/src/main/webapp/css/style.css
@@ -180,6 +180,10 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 	font-weight: bold;
 }
 
+label.deja-inscrit-cours {
+	color: #cc9f42;
+	font-weight: bold;
+}
 /* suivi */
 
 .suivi-eleve .mes-cours .cours {
@@ -204,9 +208,9 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 }
 
 .messages-affiche{
-	margin-top: 50px;
+	padding: 50px 12px ;
 	position: relative;
-	height: 100vmax;
+	
 }
 
 .ecrire-message {
@@ -266,12 +270,60 @@ input[type="submit"]:hover, input[type="button"]:hover, button:hover {
 }
 
 
+/* EXERCICE */
+
+.ui-droppable-hover {
+	background-color: pink;
+}
+
+.wrap-input-drop {
+    background: rgba(212, 228, 251, 0.38);
+    height: 30px;
+    width: 150px;
+    display: inline-block;
+    vertical-align: middle;
+    /* margin-top: 12px; */
+    border: 3px dashed #6969a7;
+}
+
+.zone-drag-drop .phrase {
+	line-height: 3em;
+}
+.zone-drag-drop .phrase .wrap-input-drag{
+	line-height: 1em;
+	display: block;
+	top: 0; right: 0;
+	left: 0; bottom: 0;
+	 border: none;
+	 font-size: bold;
+}
+
+.wrap-input-drag {
+	 display: inline-block;
+    text-align: center;
+    padding: 4px 20px;
+    border: 1px solid;
+    background: rgba(243, 247, 251, 0.74);
+
+}
+
+.qcm-wrap td {
+	padding: 6px 17px 6px 0;
+}
+.qcm-wrap td label {
+  	padding-left: 6px;
+}
+
 /* DIVERS */
 
 input.btn-refresh-nb-messages {
 	display: none;
 	font-size: 3em;
 }
+span[data-nb-messages="0"] {
+	display: none;
+}
+
 
 
 
